--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 							</li>
 							<li class="nav-item">
 								<a class="nav-link scroll" href="#contact">Contact</a>
+							<li class="nav-item">
+								<a class="nav-link scroll" href="healthbot.html">healthbot</a>
 							</li>
 
 						</ul>
