--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
 							</li>
 							<li class="nav-item">
 								<a class="nav-link scroll" href="#contact">Contact</a>
+							</li>
 							<li class="nav-item">
-								<a class="nav-link scroll" href="#healthbot">healthbot</a>
+								<a class="nav-link scroll" href="healthbot.html">healthbot</a>
 							</li>
 
 						</ul>
